Fixed Search bar on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,7 @@
     --popover: 0 0% 100%;
     --popover-foreground: 20 14.3% 4.1%;
     --primary: 24.6 100% 45%;
+    --primary-dark: 24.6 100% 35%;
     --primary-foreground: 60 8% 90%;
     --secondary: 60 4.8% 95.9%;
     --secondary-foreground: 24 9.8% 10%;
@@ -47,6 +48,7 @@
     --popover: 20 14.3% 4.1%;
     --popover-foreground: 60 9.1% 97.8%;
     --primary: 24.6 100% 45%;
+    --primary-dark: 24.6 100% 35%;
     --primary-foreground: 60 8% 90%;
     --secondary: 12 6.5% 15.1%;
     --secondary-foreground: 60 9.1% 97.8%;
